<resources>
    <string name="app_name">XO APP</string>
    <string name="restart">Restart</string>
    <string name="NewGame">New Game</string>
    <string name="Exit_Game">Exit Game</string>
    <string name="Back">Main Menu</string>
    <string name="opponent_ai_human">Opponent: AI / Human</string>
    <string name="ai">AI</string>
    <string name="human">Human</string>
    <string name="xoapp">XO APP</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="btn_display">Display</string>
</resources>