<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="Main Menu" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:rotationX="30"
        android:text="@string/xoapp"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/LayoutForButtons"
        app:layout_constraintEnd_toEndOf="@+id/LayoutForButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/LayoutForButtons"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent_ai_human"
        android:textOff="@string/ai"
        android:textOn="@string/human" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:text="Change side: X / O"
        android:textOff="X"
        android:textOn="O" />

    <LinearLayout
        android:id="@+id/LayoutForButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button00"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="00"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button01"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="01"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="02"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="10"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="11"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="12"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button20"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="20"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button21"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="21"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:onClick="clickOnButton"
                android:tag="22"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>


</LinearLayout>
